Agrega funcionalidades al conuco

--- a/src/app/components/simulacion/simulacion.component.html
+++ b/src/app/components/simulacion/simulacion.component.html
@@ -46,4 +46,26 @@
         </table>
     </div>
 
+    <hr>
+
+    <div class="container">
+        <table class="table table-sm">
+            <thead>
+                <tr>
+                    <th scope="col">Agua</th>
+                    <th scope="col">Macetas</th>
+                    <th scope="col">Semillas</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="table-danger">
+                    <td>{{ waterSum() }}</td>
+                    <td>{{ potSum() }}</td>
+                    <td>{{ seedSum() }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
 </div>
