Desarrolla el api del token, crea carpeta de estaciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <app-header></app-header>
 
 <div class="container">
+    <app-precio-api></app-precio-api>
+</div>
+
+<div class="container">
     <div class="col-3" style="float: left;">
         <app-calculadora></app-calculadora>
     </div>
