Crea componentes varios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <app-header></app-header>
 
 <div class="container">
-    <app-precio-api></app-precio-api>
+    <div class="col-3">
+        <app-precio-api></app-precio-api>
+    </div>
 </div>
 
 <div class="container">
     <div class="col-3" style="float: left;">
-        <app-calculadora></app-calculadora>
+        <app-calculator></app-calculator>
     </div>
     <div class="col-9" style="float: left;">
         <app-simulacion></app-simulacion>
