--- a/src/app/components/simulacion/simulacion.component.html
+++ b/src/app/components/simulacion/simulacion.component.html
@@ -7,9 +7,7 @@
                 <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="plant" [(ngModel)]="newPlant.plant" [ngModelOptions]="{standalone: true}">
                 <option selected>Selecciona:</option>
                 <option value="Mother Tree">Mother Tree</option>
-                <option value="Sunflower Mama">Sunflower Mama</option>
                 <option value="Plant">Plant</option>
-                <option value="Sunflower">Sunflower</option>
               </select>
                 <span class="input-group-text" id="inputGroup-sizing-sm">LE</span>
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="le" [(ngModel)]="newPlant.le" name="le">
@@ -18,6 +16,8 @@
                 <button type="submit" class="btn btn-primary btn-sm">Agregar</button>
             </div>
         </form>
+        <button class="btn btn-success" type="button" (click)="addSapling()">Add sapling</button>
+        <button class="btn btn-success" type="button" (click)="addMama()">Add sapling mama</button>
     </div>
 
     <hr>
@@ -58,10 +58,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="table-danger">
-                    <td>{{ waterSum() }}</td>
-                    <td>{{ potSum() }}</td>
-                    <td>{{ seedSum() }}</td>
+                <tr class="table-danger" *ngFor="let plant of plants">
+                    <td>{{ plant.water }}</td>
+                    <td>{{ plant.pot }}</td>
+                    <td>{{ plant.seed }}</td>
                 </tr>
             </tbody>
         </table>
