--- a/src/app/components/simulacion/simulacion.component.html
+++ b/src/app/components/simulacion/simulacion.component.html
@@ -46,7 +46,7 @@
                     <td class="table-danger">{{ plant.water }}</td>
                     <td class="table-danger">{{ plant.pot }}</td>
                     <td class="table-danger">{{ plant.seed }}</td>
-                    <button type="button" (click)="deletePlant()" class="btn btn-outline-danger btn-sm btn-circle">X</button>
+                    <button type="button" (click)="deletePlant(i)" class="btn btn-outline-danger btn-sm btn-circle">X</button>
                 </tr>
             </tbody>
         </table>
